--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Git-like FS Manager",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "js-sha1": "^0.6.0"
+  },
+  "devDependencies": {
+    "prompt": "^1.2.0"
   }
 }
