--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "name": "pholcidae",
   "version": "1.0.0",
   "description": "Git-like FS Manager",
-  "main": "index.js",
-  "type": "module",
+  "main": "src/index.ts",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "js-sha1": "^0.6.0"
+    "@types/node": "^16.11.10",
+    "js-sha1": "^0.6.0",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "prompt": "^1.2.0"
   }
 }
