--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "typescript": "^4.5.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.0",
     "prompt": "^1.2.0"
   }
 }
